--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
 /home/dg/Projects/professional/winterschool/tubddscourse/ml_part/day2_classification/solution_practice_classification.ipynb
-
-*.ipynb_checkpoints
+*.ipynb_checkpoints/
