--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /ml_part/day2_classification/solution_practice_classification.ipynb
+/ml_part/day3_unsupervised/solution_practice_clustering.ipynb
 *.ipynb_checkpoints/
