finish day 4 and 5

--- a/ml_part/requirements.txt
+++ b/ml_part/requirements.txt
@@ -5,3 +5,11 @@ pandas
 seaborn
 nltk
 wordcloud
+tensorflow
+tensorflow_datasets
+ipywidgets
+
+
+
+
+jupyter nbextension enable --py widgetsnbextension
